objects/ssot__ClinicalEncounterFacility__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClinicalEncounterFacilityStatus__c</fullName>
        <label>Clinical Encounter Facility Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUOM__c</fullName>
        <label>Duration Unit of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityId__c</fullName>
        <label>Facility</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityTypeId__c</fullName>
        <label>Facility Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Clinical Encounter Facility Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726050741_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounterFacility_ClinicalEn_rel</label>
        <referenceTo>ssot__ClinicalEncounter__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounterFacility_ClinicalEn_rel</relationshipLabel>
        <relationshipName>rel_1716726050741_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726066591_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounterFacility_FacilityTy_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounterFacility_FacilityTy_rel</relationshipLabel>
        <relationshipName>rel_1716726066591_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723127899856_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounterFacility_FacilityId_rel</label>
        <referenceTo>ssot__HealthcareFacility__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounterFacility_FacilityId_rel</relationshipLabel>
        <relationshipName>rel_1723127899856_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>